--- a/Boutique-FE/src/pages/login/login.component.html
+++ b/Boutique-FE/src/pages/login/login.component.html
@@ -3,12 +3,12 @@
     <h2>Login</h2>
     <form (ngSubmit)="onLogin()">
       <div>
-        <label for="username">Email</label>
-        <input type="email" id="email"  name="email" required>
+        <label for="email">Email</label>
+        <input type="email" class="form-control" name="email" required>
       </div>
       <div>
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password"  class="password" name="password"   required>
       </div>
       <button type="submit">Login</button>
     </form>
