completed login and sigup

--- a/Boutique-FE/src/pages/login/login.component.css
+++ b/Boutique-FE/src/pages/login/login.component.css
@@ -42,10 +42,14 @@
   
   p {
     text-align: center;
+    color: red;
   }
   
   a {
     color: #007bff;
     text-decoration: none;
+  }
+  #navigate{
+    color:blue;
   }
   
