--- a/Boutique-FE/src/pages/sign-up/sign-up.component.css
+++ b/Boutique-FE/src/pages/sign-up/sign-up.component.css
@@ -42,10 +42,13 @@
   
   p {
     text-align: center;
+    color:red
   }
   
   a {
     color: #007bff;
     text-decoration: none;
   }
-  
+  #navigate{
+    color:blue;
+  }
