--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<p>dashboard works!</p>
+<div class="container">
+    <div class="img">
+      <button class="custom-btn">Customizable</button>
+    </div>
+    <div class="img2">
+      <button class="custom-btn">Same Pinch</button>
+    </div>
+  </div>
+  
