--- a/Boutique-FE/src/pages/login/login.component.html
+++ b/Boutique-FE/src/pages/login/login.component.html
@@ -1,9 +1,14 @@
 <div class="login-container">
+  <!-- Logo Section -->
+  <div class="logo-container">
+    <img src="./media/mo1.png" class="logo" />
+  </div>
+
   <h2>Login</h2>
-  <form [formGroup]="loginform" (ngSubmit)="onLogin()">
-    
+
+  <form [formGroup]="loginform" (ngSubmit)="onLogin()" class="form-container">
     <!-- Email Field -->
-    <div>
+    <div class="form-group">
       <label for="email">Email</label>
       <input 
         type="email" 
@@ -13,14 +18,14 @@
         required>
       
       <!-- Display Validation Errors for Email -->
-      <div *ngIf="loginform.get('email')?.invalid && loginform.get('email')?.touched">
+      <div *ngIf="loginform.get('email')?.invalid && loginform.get('email')?.touched" class="error">
         <p *ngIf="loginform.get('email')?.hasError('required')">Email is required</p>
         <p *ngIf="loginform.get('email')?.hasError('email')">Enter a valid email</p>
       </div>
     </div>
-    
+
     <!-- Password Field -->
-    <div>
+    <div class="form-group">
       <label for="password">Password</label>
       <input 
         type="password" 
@@ -30,13 +35,21 @@
         required>
       
       <!-- Display Validation Errors for Password -->
-      <div *ngIf="loginform.get('password')?.invalid && loginform.get('password')?.touched">
+      <div *ngIf="loginform.get('password')?.invalid && loginform.get('password')?.touched" class="error">
         <p *ngIf="loginform.get('password')?.hasError('required')">Password is required</p>
         <p *ngIf="loginform.get('password')?.hasError('minlength')">Password must be at least 6 characters long</p>
       </div>
     </div>
-    
-    <button type="submit" [disabled]="loginform.invalid">Login</button>
+
+    <button type="submit" [disabled]="loginform.invalid" class="login-button">Login</button>
   </form>
-  <p id="navigate">Don't have an account? <button (click)="goToSignUp()">Sign Up</button></p>
+
+  <p id="navigate">Don't have an account? <button class="signup-button" (click)="goToSignUp()">Sign Up</button></p>
+
+  <app-popup-message
+  *ngIf="showPopup"
+  [title]="popupTitle"
+  [message]="popupMessage"
+  (closePopup)="closePopup()"
+></app-popup-message>
 </div>
