--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
-<div class="container">
+<div class="maincontainer">
+  <div class="container">
     <div class="img">
-      <button class="custom-btn">Customizable</button>
+      <button class="custom-btn" (click)="custom()">Customizable</button>
     </div>
     <div class="img2">
       <button class="custom-btn">Same Pinch</button>
     </div>
-  </div>
+</div>
+</div>
   
