--- a/Boutique-FE/src/pages/adminpage/add-items/add-items.component.css
+++ b/Boutique-FE/src/pages/adminpage/add-items/add-items.component.css
@@ -75,3 +75,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+  .submit-btn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
