--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="maincontainer">
+<!-- <div class="maincontainer">
   <div class="container">
     <div class="img">
       <button class="custom-btn" (click)="custom()">Customizable</button>
@@ -7,5 +7,31 @@
       <button class="custom-btn">Same Pinch</button>
     </div>
 </div>
+</div>
+   -->
+
+  
+
+<div class="main">
+  <div class="sec">
+    <div class="sec1">
+<div>
+  <h1>MIYA</h1>
+  <p>To Customize Your Product As your Needs</p>
+</div>
+<div class="btn">
+  <button  class="btn1">See More</button>
+</div>
+    </div>
+    <div class="sec2">
+      <div>
+        <h1>Same pinch</h1>
+        <p>To Customize Your Product As your Needs</p>
+      </div>
+      <div class="btn">
+        <button class="btn1">See More</button>
+      </div>
+    </div>
+  </div>
 </div>
   
