--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -1,17 +1,3 @@
-<!-- <div class="maincontainer">
-  <div class="container">
-    <div class="img">
-      <button class="custom-btn" (click)="custom()">Customizable</button>
-    </div>
-    <div class="img2">
-      <button class="custom-btn">Same Pinch</button>
-    </div>
-</div>
-</div>
-   -->
-
-  
-
 <div class="main">
   <div class="sec">
     <div class="sec1">
@@ -20,13 +6,13 @@
   <p>To Customize Your Product As your Needs</p>
 </div>
 <div class="btn">
-  <button  class="btn1">See More</button>
+  <button  class="btn1" (click)="cutomize()">See More</button>
 </div>
     </div>
     <div class="sec2">
       <div>
-        <h1>Same pinch</h1>
-        <p>To Customize Your Product As your Needs</p>
+        <h1>SAME PINCH </h1>
+        <p>To Our Customize  Product As your Needs</p>
       </div>
       <div class="btn">
         <button class="btn1">See More</button>
