--- a/Boutique-FE/src/pages/layout/header/header.component.html
+++ b/Boutique-FE/src/pages/layout/header/header.component.html
@@ -1,1 +1,7 @@
-
+<div class="header">
+    <div class="brand">Miya Designers</div>
+    <div class="icons">
+      <button class="cart">🛒 Add to Cart</button>
+      <button class="profile">👤 Profile</button>
+    </div>
+  </div>
