--- a/Boutique-FE/src/pages/login/login.component.html
+++ b/Boutique-FE/src/pages/login/login.component.html
@@ -46,10 +46,10 @@
 
   <p id="navigate">Don't have an account? <button class="signup-button" (click)="goToSignUp()">Sign Up</button></p>
 
-  <app-popup-message
+  <!-- <app-popup-message
   *ngIf="showPopup"
   [title]="popupTitle"
   [message]="popupMessage"
   (closePopup)="closePopup()"
-></app-popup-message>
+></app-popup-message> -->
 </div>
