added cart page

--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <div class="category-container">
     <div class="category-items">
         <div class="category-item">
-            <div class="category-image saree"></div>
+            <div class="category-image saree" (click)="saree()"></div>
             <div class="category-name">Sarees</div>
         </div>
         <div class="category-item">
