changes made in the header

--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
     <div class="sec2">
       <div>
         <h1>SAME PINCH </h1>
-        <p>To Our Customize  Product As your Needs</p>
+        <p>To Buy Our Customize  Product As your Needs</p>
       </div>
       <div class="btn">
         <button class="btn1">See More</button>
