--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -20,4 +20,23 @@
     <div class="image-container">
         <div class="main-image"></div>
     </div>
+    <div class="newarrivals">
+        <h1>New Arrivals</h1>
+        <div class="arrivalcard">
+            <div class="card-image">
+                <!-- <img src="../images/customize.png" alt="Product Image" /> -->
+            </div>
+        </div>
+        <div class="card-details">
+            <h2>Product Name</h2>
+            <p>Description of the product goes here.</p>
+            <p class="price">$49.99</p>
+        </div>
+    </div>
+    <div class="btn">
+        <button mat-button >View More</button>
+    </div>
+    
+    
+    
 </div>
